# AffineSift

./: CMakeLists.txt  README.md
include/: AffineSIFT.h  orsa.h
src/: AffineSIFT.cpp  compute_asift_keypoints.cpp  compute_asift_matches.cpp  demo_ASIFT.cpp  demo_ASIFT_copy.cpp  demo_lib_sift.cpp  frot.cpp  numerics1.cpp  orsa.cpp
